docs: 勘误 SSA-1 路径与不适用误判, 补 gRPC 遗漏与审查结论记录
Co-authored-by: Cursor <cursoragent@cursor.com>